--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <meta name=theme-color content>
-<link rel=canonical href=https://example.com/>
+<link rel=canonical href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/>
 <title>
 Hey! It's Sandesh — Hello there!
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
-<link rel=stylesheet href=https://example.com/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
-<link rel=apple-touch-icon sizes=180x180 href=https://example.com/apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=https://example.com/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=https://example.com/favicon-16x16.png>
-<link rel=manifest href=https://example.com/site.webmanifest>
-<link rel=mask-icon href=https://example.com/safari-pinned-tab.svg color>
-<link rel="shortcut icon" href=https://example.com/favicon.ico>
+<link rel=stylesheet href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
+<link rel=apple-touch-icon sizes=180x180 href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/favicon-16x16.png>
+<link rel=manifest href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/site.webmanifest>
+<link rel=mask-icon href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/safari-pinned-tab.svg color>
+<link rel="shortcut icon" href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/favicon.ico>
 <meta name=msapplication-TileColor content>
 <meta name=theme-color content>
 <meta itemprop=name content="Hey! It's Sandesh">
 <meta itemprop=description content="Nice theme for homepages and blogs">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://example.com">
+<meta name=twitter:image content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
 <meta name=twitter:title content="Hey! It's Sandesh">
 <meta name=twitter:description content="Nice theme for homepages and blogs">
 <meta property="og:title" content="Hey! It's Sandesh">
 <meta property="og:description" content="Nice theme for homepages and blogs">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://example.com/"><meta property="og:image" content="https://example.com">
-<link rel=alternate type=application/rss+xml href=https://example.com/index.xml title="Hey! It's Sandesh">
+<meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/"><meta property="og:image" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
+<link rel=alternate type=application/rss+xml href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/index.xml title="Hey! It's Sandesh">
 </head>
 <body>
 <div class=container>
 <header class=header>
 <span class=header__inner>
-<a href=https://example.com/ style=text-decoration:none>
+<a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/ style=text-decoration:none>
 <div class=logo>
 <span class=logo__mark>></span>
 <span class=logo__text>$ cd/home/</span>
@@ -49,12 +49,12 @@ Hey! It's Sandesh — Hello there!
 </a>
 <span class=header__right>
 <nav class=menu>
-<ul class=menu__inner><li><a href=https://example.com/about/>About</a></li><li><a href=https://example.com/posts/>Posts</a></li><li><a href=https://example.com/psst/>psst</a></li>
+<ul class=menu__inner><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/>About</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/>Posts</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/psst/>psst</a></li>
 <div class=submenu>
 <li class=dropdown>
 <a href=javascript:void(0) class=dropbtn>en</a>
 <div class=dropdown-content>
-<a title=fr href=https://example.com/fr/>fr</a>
+<a title=fr href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/>fr</a>
 </div>
 </li>
 </div>
@@ -68,7 +68,7 @@ Hey! It's Sandesh — Hello there!
 <div class=content>
 <main aria-role=main>
 <div>
-<img src=https://example.com/img/me.png class=circle alt=Portrait style=max-width:200px>
+<img src=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/img/me.png class=circle alt=Portrait style=max-width:200px>
 <h1>Hey! It's Sandesh</h1>
 <p>How you Doin'?</p>
 <div>
@@ -81,9 +81,9 @@ Hey! It's Sandesh — Hello there!
 <div class=footer__inner>
 <div class=footer__content>
 <span>&copy; 2021</span>
-<span><a href=https://example.com>Sandesh Pokhrel</a></span>
+<span><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/>Sandesh Pokhrel</a></span>
 <span><a href=https://creativecommons.org/licenses/by-nc/4.0/ target=_blank rel=noopener>CC BY-NC 4.0</a></span>
-<span><a href=https://example.com/posts/index.xml target=_blank title=rss><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></span>
+<span><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/index.xml target=_blank title=rss><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></span>
 <span></span>
 </div>
 </div>
@@ -94,6 +94,6 @@ Hey! It's Sandesh — Hello there!
 </div>
 </footer>
 </div>
-<script type=text/javascript src=https://example.com/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
+<script type=text/javascript src=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
 </body>
 </html>
