--- a/fr/series/index.html
+++ b/fr/series/index.html
@@ -10,7 +10,7 @@
 <meta name=theme-color content>
 <link rel=canonical href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/series/>
 <title>
-Series :: Hey! It's Sandesh — Salute!
+Series :: Sandesh Pokhrel — Salute!
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
@@ -32,7 +32,7 @@ Series :: Hey! It's Sandesh — Salute!
 <meta property="og:description" content="Nice theme for homepages and blogs">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/series/"><meta property="og:image" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
-<link rel=alternate type=application/rss+xml href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/series/index.xml title="Hey! It's Sandesh">
+<link rel=alternate type=application/rss+xml href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/series/index.xml title="Sandesh Pokhrel">
 </head>
 <body>
 <div class=container>
@@ -76,16 +76,15 @@ Series :: Hey! It's Sandesh — Salute!
 <footer class=footer>
 <div class=footer__inner>
 <div class=footer__content>
-<span>&copy; 2021</span>
+<span>&copy; 2022</span>
 <span><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/>Sandesh Pokhrel</a></span>
 <span><a href=https://creativecommons.org/licenses/by-nc/4.0/ target=_blank rel=noopener>CC BY-NC 4.0</a></span>
-<span><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/posts/index.xml target=_blank title=rss><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></span>
 <span></span>
 </div>
 </div>
 <div class=footer__inner>
 <div class=footer__content>
-<span>Powered by <a href=http://gohugo.io>Hugo</a></span><span>Made with &#10084; by <a href=https://github.com/rhazdon>Djordje Atlialp</a></span>
+<span>See ya around</span>
 </div>
 </div>
 </footer>
