deploy: 660cdb4037cf7004ec5ca04e8f24c7fb65ad79eb

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,16 +1,16 @@
-<!doctype html><html lang=fr>
+<!doctype html><html lang=en>
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=author content="Sandesh Pokhrel ">
-<meta name=description content>
+<meta name=author content="map[name:Sandesh Pokhrel]">
+<meta name=description content="Github link for now ">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <meta name=theme-color content>
-<link rel=canonical href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/tags/>
+<link rel=canonical href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/projects/>
 <title>
-Tags :: Sandesh Pokhrel — Salute!
+Projects :: Sandesh Pokhrel — Namsate!
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
@@ -22,17 +22,17 @@ Tags :: Sandesh Pokhrel — Salute!
 <link rel="shortcut icon" href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/favicon.ico>
 <meta name=msapplication-TileColor content>
 <meta name=theme-color content>
-<meta itemprop=name content="Tags">
-<meta itemprop=description content="Nice theme for homepages and blogs">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
-<meta name=twitter:title content="Tags">
-<meta name=twitter:description content="Nice theme for homepages and blogs">
-<meta property="og:title" content="Tags">
-<meta property="og:description" content="Nice theme for homepages and blogs">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/tags/"><meta property="og:image" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
-<link rel=alternate type=application/rss+xml href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/tags/index.xml title="Sandesh Pokhrel">
+<meta itemprop=name content="Projects">
+<meta itemprop=description content="Github link for now ">
+<meta itemprop=wordCount content="4">
+<meta itemprop=keywords content>
+<meta name=twitter:card content="summary">
+<meta name=twitter:title content="Projects">
+<meta name=twitter:description content="Github link for now ">
+<meta property="og:title" content="Projects">
+<meta property="og:description" content="Github link for now ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/projects/"><meta property="article:section" content>
 </head>
 <body>
 <div class=container>
@@ -48,12 +48,11 @@ Tags :: Sandesh Pokhrel — Salute!
 </a>
 <span class=header__right>
 <nav class=menu>
-<ul class=menu__inner><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/about/>About</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/posts/>Posts</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/fr/psst/>psst</a></li>
+<ul class=menu__inner><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/>About</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/>Posts</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/projects/>Projects</a></li>
 <div class=submenu>
 <li class=dropdown>
-<a href=javascript:void(0) class=dropbtn>fr</a>
+<a href=javascript:void(0) class=dropbtn>en</a>
 <div class=dropdown-content>
-<a title=en href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/tags/>en</a>
 </div>
 </li>
 </div>
@@ -61,15 +60,23 @@ Tags :: Sandesh Pokhrel — Salute!
 </nav>
 <span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
 </span>
+<span class="theme-toggle not-selectable"><svg class="theme-toggler" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 41c10.4934.0 19-8.5066 19-19C41 11.5066 32.4934 3 22 3 11.5066 3 3 11.5066 3 22s8.5066 19 19 19zM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22z"/></svg></span>
 </span>
 </span>
 </header>
 <div class=content>
-<main class=posts>
-<h1>Tags</h1>
-<div class=pagination>
-<div class=pagination__buttons>
+<main class=post>
+<div class=post-info>
+</p>
 </div>
+<article>
+<h2 class=post-title><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/projects/>Projects</a></h2>
+<div class=post-content>
+<h2 id=github-link-for-now>Github link for now</h2>
+</div>
+</article>
+<hr>
+<div class=post-info>
 </div>
 </main>
 </div>
