--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <meta name=theme-color content>
 <link rel=canonical href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/404.html>
 <title>
-404 Page not found :: Sandesh Pokhrel — Hello there!
+404 Page not found :: Sandesh Pokhrel — Namsate!
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css>
@@ -23,15 +23,14 @@
 <meta name=msapplication-TileColor content>
 <meta name=theme-color content>
 <meta itemprop=name content="404 Page not found">
-<meta itemprop=description content="Nice theme for homepages and blogs">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
+<meta itemprop=description content>
+<meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
-<meta name=twitter:description content="Nice theme for homepages and blogs">
+<meta name=twitter:description content>
 <meta property="og:title" content="404 Page not found">
-<meta property="og:description" content="Nice theme for homepages and blogs">
+<meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/404.html"><meta property="og:image" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/">
+<meta property="og:url" content="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/404.html">
 </head>
 <body>
 <div class=container>
@@ -47,7 +46,7 @@
 </a>
 <span class=header__right>
 <nav class=menu>
-<ul class=menu__inner><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/>About</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/>Posts</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/psst/>psst</a></li>
+<ul class=menu__inner><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/>About</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/>Posts</a></li><li><a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/projects/>Projects</a></li>
 <div class=submenu>
 <li class=dropdown>
 <a href=javascript:void(0) class=dropbtn>en</a>
@@ -59,6 +58,7 @@
 </nav>
 <span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
 </span>
+<span class="theme-toggle not-selectable"><svg class="theme-toggler" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 41c10.4934.0 19-8.5066 19-19C41 11.5066 32.4934 3 22 3 11.5066 3 3 11.5066 3 22s8.5066 19 19 19zM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22z"/></svg></span>
 </span>
 </span>
 </header>
