deploy: cbdd9b073766811f4de51b85bf8c89bf1d2e51c2

--- a/series/hugo-101/index.html
+++ b/series/hugo-101/index.html
@@ -67,6 +67,19 @@ Hugo 101 :: Sandesh Pokhrel — Namsate!
 <main class=posts>
 <h1>Hugo 101</h1>
 <div class=posts-group>
+<div class=post-year>2022</div>
+<ul class=posts-list>
+<li class=post-item>
+<a href=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/posts/2022/02/a-trip-to-snowland/>
+<span class=post-title>A trip to snowland</span>
+<span class=post-day>
+Feb 14
+</span>
+</a>
+</li>
+</ul>
+</div>
+<div class=posts-group>
 <div class=post-year>2021</div>
 <ul class=posts-list>
 <li class=post-item>
