--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,10 @@
-<!doctype html><html lang=en-us><head><title>https://sandesh-pokhrel.com.np/about/</title><link rel=canonical href=https://sandesh-pokhrel.com.np/about/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://sandesh-pokhrel.com.np/about/"></head></html>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <title>https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/</title>
+    <link rel="canonical" href="https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://sandeshpokhrel54.github.io/sandesh-pokhrel.github.io/about/">
+  </head>
+</html>
